<resources>
    <string name="app_name">NutriTrack</string>
    <string name="title_home">Home</string>
    <string name="title_tracking">Tracking</string>
    <string name="title_article">Article</string>
    <string name="title_account">Account</string>
    <string name="message_welcome_page">NutriTrack: Harmonizing Your Calorie Tracking Journey</string>
    <string name="title_welcome_page">Welcome to NutriTrack</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="title_signup_page">Complete your information below</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Nutrian</string>
    <string name="message_login_page">Please enter your data first</string>
    <string name="title_login_page">Are you ready to live healthy?</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome!</string> <!-- Menghapus tanda kutip ganda -->
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be 8 characters</string>
    <string name="login_failed">Login failed</string> <!-- Menghapus tanda kutip ganda -->
    <string name="author">Author</string>
    <string name="desc_news">Description</string>
    <string name="login_message">Login</string> <!-- Menghapus tanda kutip ganda -->
    <string name="title_news">Judul</string> <!-- Menghapus tanda kutip ganda -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="nama">Nama</string>
    <string name="bmi">BMI</string>
    <string name="save_profile">Save Profile</string>
    <string name="logout">Logout</string>
    <string name="food_name">Food Name</string>
    <string name="top_image_desc">Food Image</string>
    <string name="recomedation">Recommendation for you</string>
    <string name="howdy">Howdy,</string>
    <string name="eaten">Eaten</string>
    <string name="eaten_cal"> Kcal</string>
    <string name="remaining">Remaining</string>
    <string name="remaining_cal">0 Kcal</string>
    <string name="search_hint_text">What did you eat today?</string>
    <string name="what_i_eat_in_the_day">What I eat in the day?</string>
    <string name="tracking_nutrition">Tracking Nutrition</string>
    <string name="date_tracking">Sunday, 16/6/2024</string>
    <string name="daily_intake">Daily Intake</string>
    <string name="daily_cal">0 Kcal</string>
    <string name="calories_format">%.0f kcal</string>
    <!-- Format untuk menampilkan lemak -->
    <string name="fat_format">%.2fg</string>
    <!-- Format untuk menampilkan karbohidrat -->
    <string name="carbs_format">%.2fg</string>
    <!-- Format untuk menampilkan protein -->
    <string name="protein_format">%.2fg</string>
    <string-array name="gender_array">
        <item>Man</item>
        <item>Woman</item>
    </string-array>

    <string-array name="goal_duration_array">
        <item>1 month</item>
        <item>3 months</item>
        <item>6 months</item>
        <item>1 year</item>
    </string-array>

</resources>
