<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Top Image and User Info -->
        <ImageView
            android:id="@+id/top_image"
            android:layout_width="0dp"
            android:layout_height="324dp"
            android:src="@drawable/home_image"
            android:scaleType="centerCrop"
            android:contentDescription="@string/top_image_desc"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/user_greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/howdy"
            android:textSize="26sp"
            android:fontFamily="@font/poppinsmedium"
            android:paddingTop="50dp"
            android:textColor="@color/orange"
            app:layout_constraintTop_toTopOf="@id/top_image"
            app:layout_constraintBottom_toTopOf="@id/user_greeting2"
            app:layout_constraintStart_toStartOf="@id/top_image"
            android:layout_marginLeft="16dp" />

        <TextView
            android:id="@+id/user_greeting2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="24sp"
            android:fontFamily="@font/poppinsmedium"
            android:textColor="@color/orange"
            app:layout_constraintTop_toBottomOf="@id/user_greeting"
            app:layout_constraintBottom_toTopOf="@id/daily_cal"
            app:layout_constraintStart_toStartOf="@id/top_image"
            android:layout_marginLeft="16dp"/>

        <TextView
            android:id="@+id/daily_cal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily_intake"
            android:textSize="20sp"
            android:fontFamily="@font/poppinsmedium"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/user_greeting2"
            app:layout_constraintStart_toStartOf="@id/user_greeting2"
            android:layout_marginTop="25dp" />

        <TextView
            android:id="@+id/daily_cal_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/daily_cal"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@id/daily_cal"
            app:layout_constraintTop_toBottomOf="@id/daily_cal" />

        <TextView
            android:id="@+id/remaining_cal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remaining"
            android:textSize="18sp"
            android:fontFamily="@font/poppinsmedium"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/daily_cal_value"
            app:layout_constraintStart_toStartOf="@id/daily_cal"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/remaining_cal_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remaining_cal"
            android:textSize="24sp"
            android:fontFamily="@font/poppinsmedium"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/remaining_cal"
            app:layout_constraintStart_toStartOf="@id/remaining_cal"
            android:layout_marginTop="4dp" />

        <!-- Recommendation Title and RecyclerView -->
        <LinearLayout
            android:paddingTop="40dp"
            android:paddingHorizontal="20dp"
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/top_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_marginBottom="20dp"
            android:layout_marginTop="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/recomedation" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcListHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
